Fix path to FastAPI application in CI pipeline mock mode

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Start API in mock mode
         run: |
-          USE_MOCK_LLM=1 uvicorn app:app --host 0.0.0.0 --port 8000 &
+          USE_MOCK_LLM=1 uvicorn src.app:app --host 0.0.0.0 --port 8000 &
           sleep 10
 
       - name: Run semantic tests
