Refactor CI pipeline to install dependencies from requirements.txt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install fastapi uvicorn chromadb requests
+          pip install -r requirements.txt
 
       - name: Rebuild embeddings
         run: python -m src.embed
